[package]
name = "monkey-rs"
version = "0.1.0"
edition = "2021"
authors = ["Evan Fleming"]
license = "MIT"
description = "A Rust implementation of the Monkey programming language."
repository = "https://github.com/oldmanfleming/monkey-rs"

[dependencies]
anyhow = "1.0.79"
byteorder = "1.5.0"
clap = { version = "4.4.12", features = ["derive"] }
lazy_static = "1.4.0"

[dev-dependencies]
criterion = { version = "0.5.1", features = ["html_reports"] }

[lib]
path = "lib/mod.rs"

[[bin]]
name = "monkey"
path = "src/main.rs"

[[bench]]
name = "benchmark"
harness = false

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

# Config for 'cargo dist'
[workspace.metadata.dist]
# The preferred cargo-dist version to use in CI (Cargo.toml SemVer syntax)
cargo-dist-version = "0.8.2"
rust-toolchain-version = "nightly"
# CI backends to support
ci = ["github"]
# The installers to generate for each app
installers = ["shell", "powershell", "homebrew"]
# Target platforms to build apps for (Rust target-triple syntax)
targets = [
  "aarch64-apple-darwin",
  "x86_64-apple-darwin",
  "x86_64-unknown-linux-gnu",
  "x86_64-pc-windows-msvc",
]
# Publish jobs to run in CI
pr-run-mode = "plan"
